// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field Renderers #autonomousSystemRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  .c0 > span.euiToolTipAnchor {
  display: block;
}

.c0 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        data-test-subj="cellActions-renderContent-source.as.organization.name"
      >
        <div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <div>
              <div
                data-provider-id="draggableId.content.autonomous-system-renderer-default-draggable-ip-overview-source_as_organization_name"
                tabindex="-1"
              >
                <span
                  class="c0"
                  data-test-subj="render-content-source.as.organization.name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    Test Org
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      /
    </div>
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        data-test-subj="cellActions-renderContent-source.as.number"
      >
        <div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <div>
              <div
                data-provider-id="draggableId.content.autonomous-system-renderer-default-draggable-ip-overview-source_as_number"
                tabindex="-1"
              >
                <span
                  class="c0"
                  data-test-subj="render-content-source.as.number"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    12345
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #hostIdRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  .c0 > span.euiToolTipAnchor {
  display: block;
}

.c0 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
    data-test-subj="cellActions-renderContent-host.name"
  >
    <div>
      <div
        class="euiPopover emotion-euiPopover-inline-block"
      >
        <div>
          <div
            data-provider-id="draggableId.content.host-name-renderer-default-draggable-ip-overview-host-name"
            tabindex="-1"
          >
            <span
              class="c0"
              data-test-subj="render-content-host.name"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <a
                  class="euiLink emotion-euiLink-primary"
                  data-test-subj="host-details-button"
                  href="securitySolutionUI/hosts/name/raspberrypi"
                  rel="noreferrer"
                >
                  raspberrypi
                </a>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #hostNameRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  .c0 > span.euiToolTipAnchor {
  display: block;
}

.c0 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
    data-test-subj="cellActions-renderContent-host.name"
  >
    <div>
      <div
        class="euiPopover emotion-euiPopover-inline-block"
      >
        <div>
          <div
            data-provider-id="draggableId.content.host-name-renderer-default-draggable-ip-overview-host-name"
            tabindex="-1"
          >
            <span
              class="c0"
              data-test-subj="render-content-host.name"
            >
              <span
                class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
              >
                <a
                  class="euiLink emotion-euiLink-primary"
                  data-test-subj="host-details-button"
                  href="securitySolutionUI/hosts/name/raspberrypi"
                  rel="noreferrer"
                >
                  raspberrypi
                </a>
              </span>
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #locationRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  .c0 > span.euiToolTipAnchor {
  display: block;
}

.c0 > span.euiToolTipAnchor.eui-textTruncate {
  display: inline-block;
}

<div
    class="euiFlexGroup emotion-euiFlexGroup-responsive-none-flexStart-center-row"
  >
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        data-test-subj="cellActions-renderContent-source.geo.city_name"
      >
        <div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <div>
              <div
                data-provider-id="draggableId.content.location-renderer-default-draggable-ip-overview-source_geo_city_name"
                tabindex="-1"
              >
                <span
                  class="c0"
                  data-test-subj="render-content-source.geo.city_name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    , 
    <div
      class="euiFlexItem emotion-euiFlexItem-growZero"
    >
      <div
        data-test-subj="cellActions-renderContent-source.geo.region_name"
      >
        <div>
          <div
            class="euiPopover emotion-euiPopover-inline-block"
          >
            <div>
              <div
                data-provider-id="draggableId.content.location-renderer-default-draggable-ip-overview-source_geo_region_name"
                tabindex="-1"
              >
                <span
                  class="c0"
                  data-test-subj="render-content-source.geo.region_name"
                >
                  <span
                    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
                  >
                    New York
                  </span>
                </span>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Field Renderers #reputationRenderer it renders correctly against snapshot 1`] = `<DocumentFragment />`;

exports[`Field Renderers #whoisRenderer it renders correctly against snapshot 1`] = `
<DocumentFragment>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-inlineBlock"
  >
    <a
      class="euiLink emotion-euiLink-primary"
      data-test-subj="externalLink"
      href="https://www.iana.org/whois?q=10.10.10.10"
      rel="noopener noreferrer"
      target="_blank"
    >
      iana.org
      <span
        class="emotion-EuiExternalLinkIcon"
        data-euiicon-type="popout"
        role="presentation"
      />
      <span
        class="emotion-euiScreenReaderOnly"
      >
        (external, opens in a new tab or window)
      </span>
    </a>
  </span>
</DocumentFragment>
`;
